# TaxiTripRecordsML

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml
data/01_raw/: README.md
notebooks/: data_understanding.ipynb
src/taxi_ml/: __init__.py  __main__.py  settings.py
src/taxi_ml/pipelines/data_processing/: nodes.py  pipeline.py
